--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   rxdart: ^0.27.0
   http: ^0.13.3
   flutter_slidable: ^0.6.0 
+  firebase_core: "^1.2.1"
+  firebase_auth: "^1.3.0"
+
 
 
 
