--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: todo
+name: places
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -30,9 +30,6 @@ dependencies:
   cupertino_icons: ^1.0.2
   rxdart: ^0.27.0
   http: ^0.13.3
-  flutter_slidable: ^0.6.0 
-  firebase_core: "^1.2.1"
-  firebase_auth: "^1.3.0"
 
 
 
