--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="np.com.bsi.todo.todo">
+    package="np.com.bsi.places">
    <application
-        android:label="todo"
+        android:label="Places"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
