--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,9 +28,19 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  rxdart: ^0.27.0
+
   http: ^0.13.3
+
+  path_provider: ^2.0.2
   provider: ^5.0.0
+
+  rxdart: ^0.27.0
+
+  shared_preferences: ^2.0.6
+  sqflite: ^2.0.0+3
+
+
+
 
 
 
