--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -22,6 +22,15 @@
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+
+	<key>NSLocationAlwaysUsageDescription</key>
+    <string>Place needs to access your location in order to show places near you.</string>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>Place needs to access your location in order to show places near you.</string>
+
+
+
+
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
