--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,28 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+  connectivity_plus: ^2.0.3
+
+  firebase_core: ^1.10.5
+
+  geocoding: ^2.0.1
+
+
+  get_it: ^7.2.0
+
+  google_maps_flutter: ^2.0.9
+
+  firebase_messaging: ^11.2.3
+  flutter_local_notifications: ^9.0.0
+
+  flutter_slidable: ^1.1.0
+
+
   http: ^0.13.3
+
+  image_picker: ^0.8.4+1
+
+  location: ^4.3.0
 
 
   path_provider: ^2.0.2
@@ -39,6 +60,8 @@ dependencies:
 
   shared_preferences: ^2.0.6
   sqflite: ^2.0.0+3
+
+  webview_flutter: ^3.0.0
 
 
 
